--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
     color: white;
     border-radius: 5px;
     box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.30);
+    margin: 50px 0;
 }
 
 .input-container input,
