--- a/src/styles.css
+++ b/src/styles.css
@@ -65,3 +65,39 @@
 .name svg{
     cursor:pointer;
 }
+
+@media only screen and (min-width: 1400px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    * {
+        font-size: 30px;
+    }
+}
