--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,44 @@
     cursor:pointer;
 }
 
-@media only screen and (min-width: 1400px) {
+@media (max-width: 575px) { 
+    .app-container{
+        background-color: #F5674F;
+    }
+}
+
+@media (min-width: 576px) { 
+    .app-container{
+        background-color: blue;
+    }
+}
+
+@media (min-width: 768px) { 
+    .app-container{
+        background-color: red;
+    }
+}
+
+@media (min-width: 992px) { 
+    .app-container{
+        background-color: yellow;
+    }
+}
+
+@media (min-width: 1200px) { 
+    .app-container{
+        background-color: green;
+    }
+}
+
+@media (min-width: 1400px) { 
+    .app-container{
+        background-color: black;
+    }
+}
+
+
+/* @media only screen and (min-width: 1400px) {
     * {
         font-size: 30px;
     }
@@ -74,30 +111,30 @@
 
 @media only screen and (min-width: 1200px) {
     * {
-        font-size: 30px;
+        font-size: 23px;
     }
 }
 
 @media only screen and (min-width: 992px) {
     * {
-        font-size: 30px;
+        font-size: 17px;
     }
 }
 
 @media only screen and (min-width: 768px) {
     * {
-        font-size: 30px;
+        font-size: 12px;
     }
 }
 
 @media only screen and (min-width: 576px) {
     * {
-        font-size: 30px;
+        font-size: 9px;
     }
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 575px) {
     * {
-        font-size: 30px;
+        font-size: 9px;
     }
-}
+} */
