--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,6 @@
     cursor:pointer;
 }
 
-
 @media (max-width: 576px) { 
     .app-container{
         background-color: #F5674F;
@@ -102,3 +101,40 @@
         background-color: black;
     }
 }
+
+
+/* @media only screen and (min-width: 1400px) {
+    * {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    * {
+        font-size: 23px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    * {
+        font-size: 17px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    * {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    * {
+        font-size: 9px;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    * {
+        font-size: 9px;
+    }
+} */
