--- a/src/styles.css
+++ b/src/styles.css
@@ -74,8 +74,13 @@
     *{
         font-size: 8px;
     }
+
+    .list-container {
+        height: 100%;
+    }
+
     .app-container{
-        background-color: #F5674F;
+        background-color: #894ff5;
     }
 }
 
