--- a/src/styles.css
+++ b/src/styles.css
@@ -72,16 +72,14 @@
 
 @media (max-width: 576px) { 
     *{
-        font-size: 8px;
+        font-size: 14px;
     }
 
     .list-container {
         height: 100%;
+        width: 70%;
     }
 
-    .app-container{
-        background-color: #894ff5;
-    }
 }
 
 @media (min-width: 576px) { 
